k8s/base/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blaster
  namespace: $(kubernetes-namespace)
spec:
  routes:
  - kind: Rule
    match: Host(`internal.hellman.oxygen.dfds.cloud`) && PathPrefix(`/blaster`)
    middlewares:
    - name: blaster-internal
      namespace: $(kubernetes-namespace)
    priority: 0
    services:
    - kind: Service
      name: blaster
      namespace: $(kubernetes-namespace)
      port: 80
  - kind: Rule
    match: Host(`build.dfds.cloud`)
    priority: 0
    services:
    - kind: Service
      name: blaster
      namespace: $(kubernetes-namespace)
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: blaster-internal
  namespace: $(kubernetes-namespace)
spec:
  stripPrefix:
    prefixes:
    - /blaster
